<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
     />

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity2"
    android:background="#f2f2f2">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        tools:ignore="MissingConstraints"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25sp"
        app:cardElevation="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/connexion"
                    android:textColor="@color/black"
                    android:textSize="35sp"> </TextView>



                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginRight="10dp"
                    android:background="#f2f2f2"
                    android:hint="@string/Nom_Utilisateur"
                    android:padding="10dp"> </EditText>

                <EditText
                    android:id="@+id/motdepasse"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:background="#f2f2f2"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:padding="10dp"> </EditText>

                <TextView
                    android:id="@+id/creercompte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="@string/creer_un_compte"
                    android:textColor="@color/black"
                    android:textSize="18sp"> </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/connection"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/black"
                        android:text="@string/se_connecter">

                    </Button>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todoo" />


</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>